[gd_scene load_steps=2 format=3 uid="uid://us6cw7bv6kwn"]

[ext_resource type="Script" path="res://scripts/shadow_walk_node.gd" id="1_wghtb"]

[node name="shadow_walk_node" type="Node2D"]
script = ExtResource("1_wghtb")

[node name="teleport_delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="navigation" type="Node2D" parent="."]

[node name="shadow_verifier_small" type="RayCast2D" parent="navigation"]
target_position = Vector2(517, -2)
collision_mask = 4
collide_with_areas = true

[node name="shadow_verifier_big" type="RayCast2D" parent="navigation"]
target_position = Vector2(1443, -1)
collision_mask = 4
collide_with_areas = true

[node name="new_shadow_pos" type="ColorRect" parent="."]
offset_left = 51.0
offset_top = -109.0
offset_right = 271.0
offset_bottom = 60.0
color = Color(0.761963, 0.374038, 0.381944, 1)

[connection signal="timeout" from="teleport_delay" to="." method="_on_teleport_delay_timeout"]
